# model-munger

./: Dockerfile  README.md  _typos.toml  pyproject.toml
.github/workflows/: docker.yml
src/model_munger/: cli.py  cloudnet.py  download.py  metadata.py  process.py  utils.py
