[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model_munger"
authors = [
  {name = "Tuomas Siipola", email = "tuomas.siipola@fmi.fi"}
]
description = "Extract vertical profiles from NWP models and output netCDF files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "netCDF4",
  "requests",
  "pygrib"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "mypy",
  "pytest",
  "ruff",
  "types-requests"
]
dev = ["pre-commit", "release-version"]

[project.scripts]
model-munger = "model_munger.cli:main"

[project.urls]
Homepage = "https://github.com/actris-cloudnet/model-munger"
Issues = "https://github.com/actris-cloudnet/model-munger/issues"

[tool.hatch.version]
path = "src/model_munger/version.py"

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["netCDF4.*", "pygrib.*"]
ignore_missing_imports = true

[tool.release-version]
filename = "src/model_munger/version.py"
pattern = ["__version__ = \"(?P<major>\\d+).(?P<minor>\\d+).(?P<patch>\\d+)\""]
